openshift/services/amq-streams/operator-init/namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-cluster
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
