openshift/services/amq-streams/operator-init/kafka-ui.yml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: my-cluster-kafdrop
  namespace: kafka-cluster
  labels:
    app: kafdrop
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    app.openshift.io/vcs-uri: 'https://github.com/obsidiandynamics/kafdrop'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    name: kafdrop
  template:
    metadata:
      name: kafdrop
      labels:
        name: kafdrop
    spec:
      containers:
        - name: kafdrop
          imagePullPolicy: IfNotPresent
          image: obsidiandynamics/kafdrop
          ports:
            - containerPort: 9000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /actuator/health
              port: 9000
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /actuator/health
              port: 9000
              scheme: HTTP
  triggers:
    - type: ConfigChange
---
kind: Service
apiVersion: v1
metadata:
  name: my-cluster-kafdrop
  namespace: kafka-cluster
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app: kafdrop
spec:
  ports:
    - name: 9000-tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    deploymentconfig: my-cluster-kafdrop
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app: kafdrop
  name: my-cluster-kafdrop
  namespace: kafka-cluster
spec:
  to:
    kind: Service
    name: my-cluster-kafdrop
    weight: 100
  port:
    targetPort: 9000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
